--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
                             <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
@@ -49,9 +49,9 @@
                                         <div class="p-5">
                                             <h2 class="fw-bolder">Okeguys.com</h2>
                                             <h4 class="fw-bolder">SEO Project</h4>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <p>Optimization of the organic performance of the website okeguys.com through regular content updates, content clustering, backlink campaigns, and partnerships with several news aggregators in Indonesia.</p>
                                         </div>
-                                        <img class="img-fluid" src="assets/okeguys-banner.png" alt="..." />
+                                        <img class="img-fluid" src="assets/okeguys-banner.png" alt="okeguys.com" />
                                     </div>
                                 </div>
                             </div>
@@ -62,9 +62,9 @@
                                         <div class="p-5">
                                             <h2 class="fw-bolder">Okemom.com</h2>
                                             <h4 class="fw-bolder">SEO Project</h4>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <p>Optimization of the organic performance of the website okemom.com through regular content updates, content clustering, backlink campaigns, and partnerships with several news aggregators in Indonesia.</p>
                                         </div>
-                                        <img class="img-fluid" src="assets/okemom-banner.png" alt="..." />
+                                        <img class="img-fluid" src="assets/okemom-banner.png" alt="okemom.com" />
                                     </div>
                                 </div>
                             </div>
@@ -75,9 +75,10 @@
                                         <div class="p-5">
                                             <h2 class="fw-bolder">Limapagi.id</h2>
                                             <h4 class="fw-bolder">SEO Project</h4>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <p>Overseeing the website development and implementing on-page SEO for limapagi.id.
+                                            Optimization of the organic performance of the website through regular content updates, content clustering, backlink campaigns, and partnerships with several news aggregators in Indonesia.</p>
                                         </div>
-                                        <img class="img-fluid" src="assets/limapagi-banner.png" alt="..." />
+                                        <img class="img-fluid" src="assets/limapagi-banner.png" alt="limapagi.id" />
                                     </div>
                                 </div>
                             </div>
@@ -88,9 +89,9 @@
                                         <div class="p-5">
                                             <h2 class="fw-bolder">Marinikah.id</h2>
                                             <h4 class="fw-bolder">Website Development</h4>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <p>Pembuatan website company profile berbasis wordpress, dengan kustomisasi tampilan hingga implementasi CTA.</p>
                                         </div>
-                                        <img class="img-fluid" src="assets/marinikah-banner.png" alt="..." />
+                                        <img class="img-fluid" src="assets/marinikah-banner.png" alt="marinikah.id" />
                                     </div>
                                 </div>
                             </div>
@@ -101,9 +102,9 @@
                                         <div class="p-5">
                                             <h2 class="fw-bolder">JJ Fitness Indonesia</h2>
                                             <h4 class="fw-bolder">Website Development</h4>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <p>Pembuatan website company profile berbasis wordpress, dengan kustomisasi tampilan hingga implementasi CTA.</p>
                                         </div>
-                                        <img class="img-fluid" src="assets/jjfit-banner.png" alt="..." />
+                                        <img class="img-fluid" src="assets/jjfit-banner.png" alt="jjfitness" />
                                     </div>
                                 </div>
                             </div>
