Update file via upload
Update file via upload
index, contact

--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
                             <a class="text-gradient" href="https://x.com/santtanu11" target="_blank"><i class="bi bi-twitter"></i></a>
                             <a class="text-gradient" href="https://www.linkedin.com/in/santtanu11/" target="_blank"><i class="bi bi-linkedin"></i></a>
                             <a class="text-gradient" href="mailto:santtanu11@gmail.com" target="_blank"><i class="bi bi-envelope-fill"></i></a>
-                            <a class="text-gradient" href="https://github.com/santtanu11"><i class="bi bi-github"></i></a>
+                            <a class="text-gradient" href="https://github.com/santanu11git" target="_blank"><i class="bi bi-github"></i></a>
                         </div>
                     </div>
                 </div>
