--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="description" content="Portfolio Santanu Saputra sebagai seorang SEO Specialist dengan pengalaman di bidang SEO sejak 2017" />
+        <meta name="author" content="Santanu Saputra" />
         <title>Santanu Saputra - SEO Specialist</title>
+
+        <!-- Twitter Card data -->
+        <meta name='twitter:card' content='summary_large_image'>
+        <meta name='twitter:site' content='@santtanu11'>
+        <meta name='twitter:title' content='Santanu Saputra | SEO Specialist'>
+        <meta name='twitter:description' content='Portfolio Santanu Saputra sebagai seorang SEO Specialist dengan pengalaman di bidang SEO sejak 2017.'>
+        <meta name='twitter:creator' content='@santtanu11'>
+
+        <!-- Twitter Summary card images must be at least 120x120px -->
+        <meta name='twitter:image' content='assets/og-image.png'>
+
+        <!-- Open Graph data -->
+        <meta property='og:title' content='Santanu Saputra | SEO Specialist' />
+        <meta property="og:url" content="https://santanu11git.github.io/santanu-saputra/" />
+        <meta property='og:type' content='website' />
+        <meta property='og:image' content='assets/og-image.png' />
+        <meta property='og:description' content='Portfolio Santanu Saputra sebagai seorang SEO Specialist dengan pengalaman di bidang SEO sejak 2017.' />
+
+        <link rel="canonical" href="https://santanu11git.github.io/santanu-saputra/" />
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Custom Google font-->
