--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,25 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>My Resume - Santanu Saputra</title>
+
+        <!-- Twitter Card data -->
+        <meta name='twitter:card' content='summary_large_image'>
+        <meta name='twitter:site' content='@santtanu11'>
+        <meta name='twitter:title' content='My Resume - Santanu Saputra'>
+        <meta name='twitter:description' content='Ringkasan perjalanan karir saya di dunia digital khususnya SEO, sejak 2017 di berbagai perusahaan.'>
+        <meta name='twitter:creator' content='@santtanu11'>
+
+        <!-- Twitter Summary card images must be at least 120x120px -->
+        <meta name='twitter:image' content='assets/og-image.png'>
+
+        <!-- Open Graph data -->
+        <meta property='og:title' content='My Resume - Santanu Saputra' />
+        <meta property="og:url" content="https://santanu11git.github.io/santanu-saputra/resume.html" />
+        <meta property='og:type' content='website' />
+        <meta property='og:image' content='assets/og-image.png' />
+        <meta property='og:description' content='Ringkasan perjalanan karir saya di dunia digital khususnya SEO, sejak 2017 di berbagai perusahaan.' />
+
+        <link rel="canonical" href="https://santanu11git.github.io/santanu-saputra/resume.html/" />
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Custom Google font-->
