--- a/projects.html
+++ b/projects.html
@@ -3,9 +3,28 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="description" content="Ringkasan project yang pernah saya kerjakan, mulai dari website development hingga implementasi SEO secara on-page ataupun off-page." />
+        <meta name="author" content="Santanu Saputra" />
         <title>My Projects - Santanu Saputra</title>
+
+        <!-- Twitter Card data -->
+        <meta name='twitter:card' content='summary_large_image'>
+        <meta name='twitter:site' content='@santtanu11'>
+        <meta name='twitter:title' content='My Projects - Santanu Saputra'>
+        <meta name='twitter:description' content='Ringkasan project yang pernah saya kerjakan, mulai dari website development hingga implementasi SEO secara on-page ataupun off-page.'>
+        <meta name='twitter:creator' content='@santtanu11'>
+
+        <!-- Twitter Summary card images must be at least 120x120px -->
+        <meta name='twitter:image' content='assets/og-image.png'>
+
+        <!-- Open Graph data -->
+        <meta property='og:title' content='My Projects - Santanu Saputra' />
+        <meta property="og:url" content="https://santanu11git.github.io/santanu-saputra/resume.html" />
+        <meta property='og:type' content='website' />
+        <meta property='og:image' content='assets/og-image.png' />
+        <meta property='og:description' content='Ringkasan project yang pernah saya kerjakan, mulai dari website development hingga implementasi SEO secara on-page ataupun off-page.' />
+
+        <link rel="canonical" href="https://santanu11git.github.io/santanu-saputra/resume.html" />
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Custom Google font-->
