--- a/resume.html
+++ b/resume.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="description" content="Ringkasan perjalanan karir saya di dunia digital khususnya SEO, sejak 2017 di berbagai perusahaan." />
+        <meta name="author" content="Santanu Saputra" />
         <title>My Resume - Santanu Saputra</title>
 
         <!-- Twitter Card data -->
@@ -24,7 +24,7 @@
         <meta property='og:image' content='assets/og-image.png' />
         <meta property='og:description' content='Ringkasan perjalanan karir saya di dunia digital khususnya SEO, sejak 2017 di berbagai perusahaan.' />
 
-        <link rel="canonical" href="https://santanu11git.github.io/santanu-saputra/resume.html/" />
+        <link rel="canonical" href="https://santanu11git.github.io/santanu-saputra/resume.html" />
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Custom Google font-->
