project dan contact
project dan contact

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
 
         <!-- Open Graph data -->
         <meta property='og:title' content='Get in Touch - Santanu Saputra' />
-        <meta property="og:url" content="https://santanu11git.github.io/santanu-saputra/" />
+        <meta property="og:url" content="https://santanu11git.github.io/santanu-saputra/contact.html" />
         <meta property='og:type' content='website' />
         <meta property='og:image' content='assets/og-image.png' />
         <meta property='og:description' content='Jangan ragu untuk menghubungi saya jika ada pertanyaan yang ingin disampaikan, Anda bisa menghubungi saya melalui lnk-link berikut ini.' />
