--- a/resume.html
+++ b/resume.html
@@ -66,9 +66,13 @@
                                 <h2 class="text-primary fw-bolder mb-0">Experience</h2>
                                 <!-- Download resume button-->
                                 <!-- Note: Set the link href target to a PDF file within your project-->
-                                <a class="btn btn-primary px-4 py-3" href="https://drive.google.com/file/d/1sMa3CXnRhnRPBMHyZpzjG6k8iRgUSFda/view" target="_blank">
+                                <a class="btn btn-primary px-4 py-3" href="https://drive.google.com/file/d/1-aSRo1SS0onIqbQgS4fyxb-Q57VpGDPl/view" target="_blank">
                                     <div class="d-inline-block bi bi-download me-2"></div>
                                     Download Resume
+                                </a>
+                                <a class="btn btn-primary px-4 py-3" href="https://drive.google.com/file/d/1sMa3CXnRhnRPBMHyZpzjG6k8iRgUSFda/view" target="_blank">
+                                    <div class="d-inline-block bi bi-download me-2"></div>
+                                    Download Portfolio
                                 </a>
                             </div>
                             <!-- Experience Card 1-->
