update project via upload
update project via upload

--- a/projects.html
+++ b/projects.html
@@ -68,7 +68,13 @@
                                         <div class="p-5">
                                             <h2 class="fw-bolder">Okeguys.com</h2>
                                             <h4 class="fw-bolder">SEO Project</h4>
-                                            <p>Optimization of the organic performance of the website okeguys.com through regular content updates, content clustering, backlink campaigns, and partnerships with several news aggregators in Indonesia.</p>
+                                            <p>Optimization of the organic performance of the website okeguys.com through
+                                                <ul>
+                                                    <li>regular content updates</li>
+                                                    <li>regular content updates</li>
+                                                    <li>backlink campaigns</li>
+                                                    <li>partnerships with several news aggregators in Indonesia</li>
+                                                </ul></p>
                                         </div>
                                         <img class="img-fluid" src="assets/okeguys-banner.png" alt="okeguys.com" />
                                     </div>
@@ -81,7 +87,13 @@
                                         <div class="p-5">
                                             <h2 class="fw-bolder">Okemom.com</h2>
                                             <h4 class="fw-bolder">SEO Project</h4>
-                                            <p>Optimization of the organic performance of the website okemom.com through regular content updates, content clustering, backlink campaigns, and partnerships with several news aggregators in Indonesia.</p>
+                                            <p>Optimization of the organic performance of the website okemom.com through
+                                                <ul>
+                                                    <li>regular content updates</li>
+                                                    <li>content clustering</li>
+                                                    <li>backlink campaigns</li>
+                                                    <li>partnerships with several news aggregators in Indonesia</li>
+                                                </ul></p>
                                         </div>
                                         <img class="img-fluid" src="assets/okemom-banner.png" alt="okemom.com" />
                                     </div>
@@ -95,7 +107,13 @@
                                             <h2 class="fw-bolder">Limapagi.id</h2>
                                             <h4 class="fw-bolder">SEO Project</h4>
                                             <p>Overseeing the website development and implementing on-page SEO for limapagi.id.
-                                            Optimization of the organic performance of the website through regular content updates, content clustering, backlink campaigns, and partnerships with several news aggregators in Indonesia.</p>
+                                            Optimization of the organic performance of the website through
+                                            <ul>
+                                                <li>regular content updates</li>
+                                                <li>content clustering</li>
+                                                <li>backlink campaigns</li>
+                                                <li>partnerships with several news aggregators in Indonesia</li>
+                                            </ul></p>
                                         </div>
                                         <img class="img-fluid" src="assets/limapagi-banner.png" alt="limapagi.id" />
                                     </div>
@@ -108,7 +126,7 @@
                                         <div class="p-5">
                                             <h2 class="fw-bolder">Marinikah.id</h2>
                                             <h4 class="fw-bolder">Website Development</h4>
-                                            <p>Pembuatan website company profile berbasis wordpress, dengan kustomisasi tampilan hingga implementasi CTA.</p>
+                                            <p>Developing a company profile website using WordPress, including appearance customization and CTA (Call to Action) implementation.</p>
                                         </div>
                                         <img class="img-fluid" src="assets/marinikah-banner.png" alt="marinikah.id" />
                                     </div>
@@ -121,7 +139,7 @@
                                         <div class="p-5">
                                             <h2 class="fw-bolder">JJ Fitness Indonesia</h2>
                                             <h4 class="fw-bolder">Website Development</h4>
-                                            <p>Pembuatan website company profile berbasis wordpress, dengan kustomisasi tampilan hingga implementasi CTA.</p>
+                                            <p>Developing a company profile website using WordPress, including appearance customization and CTA (Call to Action) implementation.</p>
                                         </div>
                                         <img class="img-fluid" src="assets/jjfit-banner.png" alt="jjfitness" />
                                     </div>
