--- a/resume.html
+++ b/resume.html
@@ -62,8 +62,10 @@
                     <div class="col-lg-11 col-xl-9 col-xxl-8">
                         <!-- Experience Section-->
                         <section>
+                        <div class="text-center">
+                            <h2 class="text-primary fw-bolder mb-0">Experience</h2>
+                        </div>
                             <div class="d-flex align-items-center justify-content-between mb-4">
-                                <h2 class="text-primary fw-bolder mb-0">Experience</h2>
                                 <!-- Download resume button-->
                                 <!-- Note: Set the link href target to a PDF file within your project-->
                                 <a class="btn btn-primary px-4 py-3" href="https://drive.google.com/file/d/1-aSRo1SS0onIqbQgS4fyxb-Q57VpGDPl/view" target="_blank">
@@ -279,7 +281,6 @@
                                         <div class="row row-cols-1 row-cols-md-3 mb-4">
                                             <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Bahasa</div></div>
                                             <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">English</div></div>
-                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100"></div></div>
                                         </div>
                                     </div>
                                 </div>
