--- a/resume.html
+++ b/resume.html
@@ -62,9 +62,6 @@
                     <div class="col-lg-11 col-xl-9 col-xxl-8">
                         <!-- Experience Section-->
                         <section>
-                        <div class="text-center">
-                            <h2 class="text-primary fw-bolder mb-0">Experience</h2>
-                        </div>
                             <div class="d-flex align-items-center justify-content-between mb-4">
                                 <!-- Download resume button-->
                                 <!-- Note: Set the link href target to a PDF file within your project-->
@@ -77,6 +74,9 @@
                                     Portfolio
                                 </a>
                             </div>
+                        <div class="text-center mb-5">
+                            <h2 class="text-primary fw-bolder mb-0">Experience</h2>
+                        </div>
                             <!-- Experience Card 1-->
                             <div class="card shadow border-0 rounded-4 mb-5">
                                 <div class="card-body p-5">
@@ -188,8 +188,10 @@
                             </div>
                         </section>
                         <!-- Education Section-->
-                        <section>
+                        <div class="text-center">
                             <h2 class="text-secondary fw-bolder mb-4">Education</h2>
+                        </div>
+                        <section>
                             <!-- Education Card 1-->
                             <div class="card shadow border-0 rounded-4 mb-5">
                                 <div class="card-body p-5">
