update og image
update og mage

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <meta name='twitter:creator' content='@santtanu11'>
 
         <!-- Twitter Summary card images must be at least 120x120px -->
-        <meta name='twitter:image' content='assets/og-image.png'>
+        <meta name='twitter:image' content='assets/og-santanu.jpg'>
 
         <!-- Open Graph data -->
         <meta property='og:title' content='Santanu Saputra | SEO Specialist' />
         <meta property="og:url" content="https://santanu11git.github.io/santanu-saputra/" />
         <meta property='og:type' content='website' />
-        <meta property='og:image' content='assets/og-image.png' />
+        <meta property='og:image' content='assets/og-santanu.jpg' />
         <meta property='og:description' content='Portfolio Santanu Saputra sebagai seorang SEO Specialist dengan pengalaman di bidang SEO sejak 2017.' />
 
         <link rel="canonical" href="https://santanu11git.github.io/santanu-saputra/" />
