--- a/resume.html
+++ b/resume.html
@@ -15,13 +15,13 @@
         <meta name='twitter:creator' content='@santtanu11'>
 
         <!-- Twitter Summary card images must be at least 120x120px -->
-        <meta name='twitter:image' content='assets/og-image.png'>
+        <meta name='twitter:image' content='assets/og-santanu.jpg'>
 
         <!-- Open Graph data -->
         <meta property='og:title' content='My Resume - Santanu Saputra' />
         <meta property="og:url" content="https://santanu11git.github.io/santanu-saputra/resume.html" />
         <meta property='og:type' content='website' />
-        <meta property='og:image' content='assets/og-image.png' />
+        <meta property='og:image' content='assets/og-santanu.jpg' />
         <meta property='og:description' content='Ringkasan perjalanan karir saya di dunia digital khususnya SEO, sejak 2017 di berbagai perusahaan.' />
 
         <link rel="canonical" href="https://santanu11git.github.io/santanu-saputra/resume.html" />
