--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Portfolio Santanu Saputra sebagai seorang SEO Specialist dengan pengalaman di bidang SEO sejak 2017" />
+        <meta name="description" content="Saya Santanu Saputra, sebagai seorang SEO Specialist saya telah menggeluti bidang SEO sejak 2017 dengan banyak pencapaian dalam membangun organic traffic." />
         <meta name="author" content="Santanu Saputra" />
         <title>Santanu Saputra - SEO Specialist</title>
 
@@ -11,7 +11,7 @@
         <meta name='twitter:card' content='summary_large_image'>
         <meta name='twitter:site' content='@santtanu11'>
         <meta name='twitter:title' content='Santanu Saputra | SEO Specialist'>
-        <meta name='twitter:description' content='Portfolio Santanu Saputra sebagai seorang SEO Specialist dengan pengalaman di bidang SEO sejak 2017.'>
+        <meta name='twitter:description' content='Saya Santanu Saputra, sebagai seorang SEO Specialist saya telah menggeluti bidang SEO sejak 2017 dengan banyak pencapaian dalam membangun organic traffic.'>
         <meta name='twitter:creator' content='@santtanu11'>
 
         <!-- Twitter Summary card images must be at least 120x120px -->
@@ -22,7 +22,7 @@
         <meta property="og:url" content="https://santanu11git.github.io/santanu-saputra/" />
         <meta property='og:type' content='website' />
         <meta property='og:image' content='assets/og-santanu.jpg' />
-        <meta property='og:description' content='Portfolio Santanu Saputra sebagai seorang SEO Specialist dengan pengalaman di bidang SEO sejak 2017.' />
+        <meta property='og:description' content='Saya Santanu Saputra, sebagai seorang SEO Specialist saya telah menggeluti bidang SEO sejak 2017 dengan banyak pencapaian dalam membangun organic traffic.' />
 
         <link rel="canonical" href="https://santanu11git.github.io/santanu-saputra/" />
         <!-- Favicon-->
