--- a/contact.html
+++ b/contact.html
@@ -15,13 +15,13 @@
         <meta name='twitter:creator' content='@santtanu11'>
 
         <!-- Twitter Summary card images must be at least 120x120px -->
-        <meta name='twitter:image' content='assets/og-santanu.jpg'>
+        <meta name='twitter:image' content='https://raw.githubusercontent.com/santanu11git/santanu-saputra/main/assets/og-santanu.jpg'>
 
         <!-- Open Graph data -->
         <meta property='og:title' content='Get in Touch - Santanu Saputra' />
         <meta property="og:url" content="https://santanu11git.github.io/santanu-saputra/contact.html" />
         <meta property='og:type' content='website' />
-        <meta property='og:image' content='assets/og-santanu.jpg' />
+        <meta property='og:image' content='https://raw.githubusercontent.com/santanu11git/santanu-saputra/main/assets/og-santanu.jpg' />
         <meta property='og:description' content='Jangan ragu untuk menghubungi saya jika ada pertanyaan yang ingin disampaikan, Anda bisa menghubungi saya melalui lnk-link berikut ini.' />
 
         <link rel="canonical" href="https://santanu11git.github.io/santanu-saputra/contact.html" />
