--- a/projects.html
+++ b/projects.html
@@ -15,13 +15,13 @@
         <meta name='twitter:creator' content='@santtanu11'>
 
         <!-- Twitter Summary card images must be at least 120x120px -->
-        <meta name='twitter:image' content='assets/og-santanu.jpg'>
+        <meta name='twitter:image' content='https://raw.githubusercontent.com/santanu11git/santanu-saputra/main/assets/og-santanu.jpg'>
 
         <!-- Open Graph data -->
         <meta property='og:title' content='My Projects - Santanu Saputra' />
         <meta property="og:url" content="https://santanu11git.github.io/santanu-saputra/projects.html" />
         <meta property='og:type' content='website' />
-        <meta property='og:image' content='assets/og-santanu.jpg' />
+        <meta property='og:image' content='https://raw.githubusercontent.com/santanu11git/santanu-saputra/main/assets/og-santanu.jpg' />
         <meta property='og:description' content='Ringkasan project yang pernah saya kerjakan, mulai dari website development hingga implementasi SEO secara on-page ataupun off-page.' />
 
         <link rel="canonical" href="https://santanu11git.github.io/santanu-saputra/projects.html" />
